--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="info">
         <h1>Looking For Inspiration</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus odit nihil ullam nesciunt quidem iste, Repellendus odit nihil</p>
-        <button>Button name</button>
+        <button>My Woman</button>
       </div>
       <div class="image">
         <img src="https://i.postimg.cc/65QxYYzh/001234.png">
